chg:rename Index.html

--- a/index.html
+++ b/index.html
@@ -4,23 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/introVideo_style.css">
+    <link rel="stylesheet" href="./css/introVideo_style.css">
     <title>Find The Rose</title>
 </head>
 <body>
   
     <div>
      
-    <video autoplay loop poster="../img/intro_video_image.png" id="bgvid">
-        <source src="../Video/Welcome-to-the-Void-GIPHY-Clips.webm" type="video/webm">
-        <source src="../Video/Welcome to the Void - GIPHY Clips.mp4" type="video/mp4">
+    <video autoplay loop poster="./img/intro_video_image.png" id="bgvid">
+        <source src="./Video/Welcome-to-the-Void-GIPHY-Clips.webm" type="video/webm">
+        <source src="./Video/Welcome to the Void - GIPHY Clips.mp4" type="video/mp4">
       </video>
       <button id="vidpause" >Stop The Video</button>
     </div>  
-    <a id="popog" href="../html/find_the_rose.html" ></a>
+    <a id="popog" href="./find_the_rose.html" ></a>
 </body>
 <footer>  
     <noscript>For use this website, please active your JavaScript.</noscript>
-    <script src="../js/introVideo.js"></script>
+    <script src="./js/introVideo.js"></script>
 </footer>
 </html>
