chg:findtherose.html

--- a/find_the_rose.html
+++ b/find_the_rose.html
@@ -46,7 +46,7 @@
                     Their best known projects to the public are collaborations with artists such as : BAUWZ ,Carlfidence,Jouvence , Blizzi, LondonsCurius, Ebony rose..<br >
                     <br >
                     
-                    A fine example of the new emerging French urban touch scene..</p>
+                    A fine example of the new emerging French urban touch scene...</p>
             </div>
             <br>
             <div class="img-guitare">
